# OIAK_P

./: BubbleSort.cpp  BubbleSort.h  BubbleSortParallel.cpp  BubbleSortParallel.h  BucketParallel.cpp  BucketParallel.h  BucketSort.cpp  BucketSort.h  CMakeLists.txt  QuickSort.cpp  QuickSort.h  QuickSortOptimal.cpp  QuickSortOptimal.h  QuickSortParallel.cpp  QuickSortParrallel.h  main.cpp  testy.cpp  testy.h
Pomiary/BucketSort/n=100/: TESTBucketSingleThread.txt  TESTBucketThread2.txt  TESTBucketThread4.txt
Pomiary/BucketSort/n=1000/: TESTBucketThread4.txt  TESTBucketThread6.txt  TESTBucketThread8.txt
Pomiary/BucketSort/n=10000/: TESTBucketSingleThread.txt  TESTBucketThread4.txt  TESTBucketThread6.txt  TESTBucketThread8.txt
Pomiary/BucketSort/n=100000/: TESTBucketThread2.txt  TESTBucketThread4.txt  TESTBucketThread6.txt  TESTBucketThread8.txt
Pomiary/QuickSort/n=100/: LimitThread16.txt  LimitThread2.txt  LimitThread32.txt  LimitThread4.txt  LimitThread64.txt  LimitThread8.txt  SingleThread.txt  TESTQuickLimitThread6.txt  TESTQuickNoLimit.txt
Pomiary/QuickSort/n=1000/: LimitThread16.txt  LimitThread2.txt  LimitThread32.txt  LimitThread4.txt  LimitThread64.txt  LimitThread8.txt  SingleThread.txt  TESTQuickLimitThread4.txt  TESTQuickLimitThread6.txt  TESTQuickLimitThread8.txt  TESTQuickNoLimit.txt
Pomiary/QuickSort/n=10000/: LimitThread16.txt  LimitThread2.txt  LimitThread32.txt  LimitThread4.txt  LimitThread64.txt  LimitThread8.txt  SingleThread.txt  TESTQuickLimitThread6.txt
Wykresy/: Wykresy_BucketSort.xlsx  Wykresy_QuickSort.xlsx
(+7 files in other folders)
